<resources>
    <string name="app_name">Puma Planner</string>

    <string name="homework_science">Science</string>

    //For homework assignment
    <string name="assignment_name">What\'s the name?</string>
    <string name="assignment_description">Type a description...</string>
    <string name="due_date">When is it due?</string>
    <string name="enter_name">Give your assignment a name:</string>
    <string name="enter_description">Give a description of the assignment</string>
    <string name="select_type">Please select an assignment type:</string>
    <string name="select_class">Please select for which class(es) you would like to display this assignment:</string>
    <string name="essay">Essay</string>
    <string name="quiz">Quiz</string>
    <string name="test">Test</string>
    <string name="reading">Reading</string>
    <string name="work">Work</string>
    <string name="presentation">Presentation</string>

    //Classes
    <string name="calculus">Calculus</string>
    <string name="pre_calc">Pre-Calc</string>
    <string name="multi">Multi-variable Calculus</string>

    //General purpose
    <string name="forward">Continue</string>
    <string name="post">Post</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings related to Contacts-->
    <string name="teacher">Teacher</string>
    <string name="leader">and Club Leader</string>
    <string name="student">Student</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    //string for search hint
    <string name="search_hint">Search Contacts</string>

    //strings to identify each page
    <string name="contacts">Contacts</string>
    <string name="calendar">Calendar</string>
    <string name="the_roar">The Roar</string>
    <string name="homework">Homework</string>

</resources>
