<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <!--TODO: Make text wrap-->

    <Button
        android:text="@string/cancel"
        android:textColor="@color/foreground_material_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assign_description_cancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="?android:attr/borderlessButtonStyle"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/assign_description_cancel"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/assign_homework_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/assignment_name"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColorHint="@color/gray"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        android:layout_below="@+id/text_input_layout_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/assignment_description"
            android:textColorHint="@color/gray"
            android:ems="10"
            android:id="@+id/assign_homework_description"
            android:gravity="top|left"
            android:layout_height="200dp"
            android:backgroundTint="@color/white"
            android:maxLength="200"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_below="@+id/text_input_layout_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <EditText
            android:id="@+id/assign_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/due_date"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColorHint="@color/gray" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:text="@string/post"
        android:textColor="@color/foreground_material_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assign_description_continue"
        android:layout_alignBaseline="@+id/assign_description_cancel"
        android:layout_alignBottom="@+id/assign_description_cancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="?android:attr/borderlessButtonStyle"/>


</RelativeLayout>